--- a/style.css
+++ b/style.css
@@ -2,7 +2,6 @@
 body {
   font-family: 'Roboto', sans-serif;
   background-color: #181D27;
-  height: 200vh;
   margin: 30px 0 0 0;
 }
 
@@ -38,7 +37,7 @@ h3 {
   align-items: center;
 }
 
-.flex-grow {
+.flex-auto-width {
   flex: 1 1 auto;
 }
 
@@ -112,4 +111,31 @@ h3 {
 .code-icon {
   max-width: 50px;
   max-height: 50px;
+}
+
+.project-thumbnail {
+  max-width: 250px;
+  max-height: 125px;
+  border: 2px solid #CECCCC;
+}
+
+.project-box {
+  margin: 0 0 40px 0;
+}
+
+.project-box h3 {
+  margin: 0 0 10px 0;
+}
+
+.project-info {
+  padding: 0 0 0 10px;
+}
+
+.company-icon-box {
+  width: 150px;
+}
+
+.company-icon {
+  max-width: 150px;
+  max-height: 150px;
 }
