--- a/style.css
+++ b/style.css
@@ -74,11 +74,13 @@ h3 {
   display: flex;
   align-items: center;
   padding: 0 0 0 10px;
+  clip-path: polygon(0 0, 93% 0, 93% 100%, 0% 100%);
 }
 
 .nav-tab.active {
   color: #FEFEFF;
   background-color: #DD7230;
+  clip-path: polygon(0% 0%, 93% 0, 100% 50%, 93% 100%, 0% 100%);
 }
 
 .nav-tab:not(.active):hover {
