--- a/style.css
+++ b/style.css
@@ -6,17 +6,23 @@ body {
 }
 
 h1 {
-  font-size: 35px;
-  font-weight: 400;
+  font-size: 32px;
+  font-weight: 300;
   color: #FEFEFF;
 }
 
 h2 {
-  font-size: 22px;
+  font-size: 18px;
+  font-weight: 300;
+  margin: 5px 0 20px 0;
 }
 
-h3 {
-  font-size: 20px;
+h2, h3, h4 {
+  color: #333333;
+}
+
+p {
+  color: #565656;
 }
 
 /* Utilities */
@@ -49,18 +55,21 @@ h3 {
 /* Specifics */
 
 .avatar {
-  width: 200px;
-  height: 200px;
+  width: 150px;
+  height: 150px;
   border: 2px solid #FEFEFF;
   border-radius: 50%;
   background-size: cover;
   background-image: url(images/kees.jpg);
 }
 
-@media (min-width: 768px) {
-  .fixed-container {
-    position: fixed;
-  }
+.fixed-container {
+  position: fixed;
+}
+
+.nav-tabs {
+  border: none;
+  width: 200px;
 }
 
 .nav-tabs > a {
@@ -100,6 +109,16 @@ h3 {
   visibility: hidden;
 }
 
+.tech-stack > h3 {
+  font-size: 16px;
+  font-weight: 300;
+  margin-top: 5px;
+}
+
+.tech-stack > hr {
+  margin-top: 5px;
+}
+
 .code-container {
   display: flex;
   flex-wrap: wrap;
@@ -108,6 +127,16 @@ h3 {
 .code-box {
   flex: 0 0 150px;
   text-align: center;
+  margin: 0 0 10px 0;
+}
+
+.code-box > h4 {
+  font-size: 14px;
+}
+
+.code-box > p {
+  font-size: 12px;
+  color: #979797;
 }
 
 .code-icon {
@@ -116,28 +145,74 @@ h3 {
 }
 
 .project-thumbnail {
-  max-width: 250px;
-  max-height: 125px;
-  border: 2px solid #CECCCC;
+  min-width: 175px;
+  max-width: 175px;
+  min-height: 100px;
+  max-height: 100px;
+  background-size: cover;
+  background-position: center;
+  border: 1px solid #CECCCC;
 }
 
 .project-box {
-  margin: 0 0 40px 0;
+  margin: 0 0 20px 0;
+  flex-wrap: wrap;
 }
 
 .project-box h3 {
   margin: 0 0 10px 0;
+  font-size: 16px;
 }
 
 .project-info {
   padding: 0 0 0 10px;
+  flex: 1 0 200px;
 }
 
 .company-icon-box {
-  width: 150px;
+  min-width: 75px;
+  max-width: 75px;
+  min-height: 75px;
+  max-height: 75px;
+  margin-left: 10px;
+  background-size: contain;
+  background-position: center;
+  background-repeat: no-repeat;
 }
 
-.company-icon {
-  max-width: 150px;
-  max-height: 150px;
+.experience-box:not(:last-child) {
+  margin-bottom: 40px;
+}
+
+.experience-box:last-child {
+  margin-bottom: 20px;
+}
+
+.experience-box h3 {
+  font-size: 16px;
+  font-weight: 500;
+  margin: 0 0 5px 0;
+}
+
+.experience-box h4 {
+  font-size: 16px;
+  font-weight: 400;
+  margin: 0 0 10px 0;
+}
+
+.experience-box hr {
+  margin: 10px 0 10px 0;
+}
+
+.experience-box span {
+  font-size: 12px;
+  color: #979797;
+}
+
+.experience-box p {
+  margin: 0;
+}
+
+.space {
+  min-height: 30vh;
 }
