--- a/style.css
+++ b/style.css
@@ -25,6 +25,10 @@ p {
   color: #565656;
 }
 
+a:focus {
+  text-decoration: none;
+}
+
 /* Utilities */
 
 .flex-box {
@@ -125,6 +129,10 @@ p {
   text-decoration: none;
 }
 
+.contact-info {
+  font-weight: 500;
+}
+
 .info-container {
   background-color: #FEFEFF;
   padding: 20px;
@@ -138,7 +146,7 @@ p {
   visibility: hidden;
 }
 
-.tech-stack > h3, .downloads-container > h3 {
+.tech-stack > h3, .downloads-container > h3, .features-container > h3 {
   font-size: 16px;
   font-weight: 300;
   margin-top: 5px;
@@ -260,14 +268,14 @@ p {
 }
 
 .space {
-  min-height: 80vh;
+  min-height: 20vh;
 }
 
-.downloads-container a {
+.downloads-container a, .features-container a, {
   text-decoration: none;
 }
 
-.downloads-container a:hover {
+.downloads-container a:hover, .features-container a:hover {
   text-decoration: none;
 }
 
@@ -303,4 +311,37 @@ p {
   font-size: 12px;
   color: #333333;
   margin: 0;
+}
+
+.features-container > hr {
+  margin: 5px 0;
+}
+
+#videos {
+  margin-top: 20px;
+}
+
+.video-box h3 {
+  font-size: 16px;
+  font-weight: 400;
+  margin: 15px 0 5px 0;
+}
+
+@media (max-width: 1024px) {
+  iframe {
+    width: 100%;
+    height: inherit;
+    margin: 0;
+  }
+}
+
+@media (min-width: 1025px) {
+  iframe {
+    width: 100%;
+    height: inherit;
+    margin: 0;
+  }
+  .video-box {
+    display: inline-block;
+  }
 }
