--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 body {
   font-family: 'Roboto', sans-serif;
   background-color: #181D27;
-  margin: 30px 0 0 0;
+  margin: 0 0 0 0;
 }
 
 h1 {
@@ -34,6 +34,10 @@ a:focus {
 }
 
 /* Utilities */
+
+.spacer {
+  height: 30px;
+}
 
 .flex-box {
   display: flex;
@@ -103,6 +107,7 @@ a:focus {
 
 @media (min-width: 768px) {
   .fixed-container {
+    margin-top: 30px;
     position: fixed;
   }
 }
@@ -156,7 +161,6 @@ a:focus {
 .info-container {
   background-color: #FEFEFF;
   padding: 20px;
-  margin: 0 0 30px 0;
 }
 
 .anchor {
