--- a/style.css
+++ b/style.css
@@ -243,7 +243,7 @@ a:focus {
   }
 
   .project-info {
-    padding: 0 0 0 10px;
+    padding: 0 0 0 0;
     flex: 1 0 200px;
   }
 }
@@ -388,4 +388,56 @@ a:focus {
 
 #contact-details {
   padding: 10px 0;
+}
+
+/* Loading animation */
+#loader {
+    display: block;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 100;
+    width: 100vw;
+    height: 100vh;
+    background-color: #181D27;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+#spinner {
+  width: 75px;
+  height: 75px;
+  border: solid 5px rgba(0,0,0,0);
+  border-top-color: #F79824;
+  border-width: 5px 0px 0px 0px;
+
+  -webkit-border-radius: 50%;
+     -moz-border-radius: 50%;
+          border-radius: 50%;
+
+  -webkit-animation: spin 0.5s infinite linear;
+     -moz-animation: spin 0.5s infinite linear;
+       -o-animation: spin 0.5s infinite linear;
+          animation: spin 0.5s infinite linear;
+}
+
+@-webkit-keyframes spin {
+  from {-webkit-transform: rotate(0deg);}
+  to   {-webkit-transform: rotate(359deg);}
+}
+
+@-moz-keyframes spin {
+  from {-moz-transform: rotate(0deg);}
+  to   {-moz-transform: rotate(359deg);}
+}
+
+@-o-keyframes spin {
+  from {-o-transform: rotate(0deg);}
+  to   {-o-transform: rotate(359deg);}
+}
+
+@keyframes spin{
+  from {transform: rotate(0deg);}
+  to   {transform: rotate(359deg);}
 }
